--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,9 @@
 body {
-	margin: 0;
-	padding: 0;
+    margin: 0;
+    padding: 0;
     font-family: 'Raleway', sans-serif;
     background-color: #4A4A51;
+    height: 100vh;
 }
 
 header {
